--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,7 +4,10 @@ body 	{ font: normal 14px Calibri; line-height: 130%; }
 footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #777; }
 
 
+.clear { clear: both; }
 .boxGeneric { border: 1px solid #ccc; padding: 10px; margin: 8px 0; background: #eee; }
+.formLabel { width: 140px; color: #0051a7; display: inline-block; padding: 4px 0; }
+
 
 
 
@@ -13,8 +16,8 @@ footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #7
 
 #boxMobType .boxMob { margin: 5px; padding: 0 0 10px; width: 160px; display: inline-block; vertical-align: top; }
 
-.boxMob .boxPortrait { background: #fff; width: 150px; height: 150px; margin: 2px auto; overflow: hidden; border: 1px solid #ccc; position: relative; cursor: pointer; }
-.boxMob .boxPortrait img { width: 100%; }
+.boxPortrait { background: #fff; width: 150px; height: 150px; margin: 2px auto; overflow: hidden; border: 1px solid #ccc; position: relative; cursor: pointer; }
+.boxPortrait img { width: 100%; }
 .boxMob .mobName		{ background: rgba(200,200,200,0.85); color: #333; padding: 5px 10px; text-align: center; position: absolute; bottom: 4%; left: 0; width: 100%; display: none; }
 
 .boxMob .boxCommand { visibility: hidden; }
@@ -35,9 +38,27 @@ footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #7
 
 
 #boxCommandType 	{}
-#boxMobCustomizer	{ display: none; }
 #boxSpawnerCustomizer	{ display: none; }
 
 
 
 #txtResult	{ width: 80%; height: 50px; background: #333; color: #0f0; padding: 4px; border: 1px solid #000; }
+
+
+
+
+/*-- Mob Customizer --*/
+#boxMobCustomizer	{ display: none; }
+
+#boxMobCustomizer .box_specs { float: left; width: 250px; margin-right: 15px; }
+#boxMobCustomizer .box_props { float: left; }
+
+#boxMobHearts	{ padding: 15px 0; width: 220px; }
+#boxMobHearts img { width: 18px; }
+
+#prop_global 	{ padding: 0 0 20px; }
+#prop_skel, 
+#prop_zomb 	{ padding: 0 0 20px; display: none; }
+
+
+.box_props label:not(.formLabel) { display: inline-block; width: 70px; }
