--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -32,10 +32,10 @@ footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #7
 .boxMob .mobName		{ background: rgba(200,200,200,0.85); color: #333; padding: 5px 10px; text-align: center; position: absolute; bottom: 4%; left: 0; width: 100%; display: none; }
 
 .boxMob .boxCommand { visibility: hidden; }
-.boxMob .boxCommand span {
+.boxCommand span {
 	background: #0051a7; background-repeat: no-repeat; background-position: 0px 0px;
-	border: 1px solid #0051a7; color: #fff;
-	width: 75px; padding: 3px 0 3px 32px; display: inline-block; margin: 1px 2px; cursor: pointer;
+	border: 1px solid #0051a7; color: #fff; text-align: center;
+	width: 75px; padding: 3px 0 3px 25px; display: inline-block; margin: 1px 2px; cursor: pointer;
 }
 .boxMob .boxCommand .cmdSelect { background-image: url('../images/ico-select.png') }
 .boxMob .boxCommand .cmdEdit { background-image: url('../images/ico-edit.png'); }
@@ -60,9 +60,16 @@ footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #7
 #boxMobHearts	{ padding: 15px 0; width: 220px; margin: auto; text-align: center; }
 #boxMobHearts img { width: 18px; }
 
+#boxMobCustomizer .boxCommand { padding: 20px 0; }
+#boxMobCustomizer .boxCommand span { width: 115px; }
+#boxMobCustomizer .boxCommand span.cmdSave 	{ background-image: url('../images/ico-save.png'); }
+#boxMobCustomizer .boxCommand span.cmdDelete{ background-image: url('../images/ico-delete.png'); }
+
 #prop_global 	{ padding: 0 0 20px; }
+#prop_crep, 
+#prop_endm,
 #prop_skel, 
 #prop_zomb 	{ padding: 0 0 20px; display: none; }
 
-
 .box_props label:not(.formLabel) { display: inline-block; width: 70px; }
+
